infra/thmanyah/image/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-deployment
  namespace: image-ns
  labels:
    app: image
spec:
  replicas: 2
  selector:
    matchLabels:
      app: image
  template:
    metadata:
      labels:
        app: image
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: image
          image: ghcr.io/faresmirza/image-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /livez
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
      imagePullSecrets:
        - name: ghcr-regcred
      restartPolicy: Always
