infra/thmanyah/image/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-ingress
  namespace: image-ns
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: thmanyah.local
      http:
        paths:
          - path: /image
            pathType: Prefix
            backend:
              service:
                name: image-service
                port:
                  number: 5000
