infra/thmanyah/image/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: image-network-policy
  namespace: image-ns
spec:
  podSelector:
    matchLabels:
      app: image
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: api-ns
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-ns
      ports:
        - protocol: TCP
          port: 5000

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth-ns
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: minio-ns
      ports:
        - protocol: TCP
          port: 4000   # Auth verify
        - protocol: TCP
          port: 9000   # MinIO API
